tests/positive/Dependencies/.libs/Base/Base.juvix
module Base;

axiom Base : Type;
