tests/negative/LacksFunctionClause.juvix
module LacksFunctionClause;

id : Type → Type → Type;
